# lira

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: conversation.py  prompts.py  voice_agent.py  worker.py
backend/app/api/: analytics_routes.py  routes.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: analytics.py  session.py
backend/app/services/: __init__.py  agent_manager.py  analytics.py  deepgram_stt.py  deepgram_tts.py  livekit.py  llm.py
backend/app/tests/: __init__.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: VoiceRoom.tsx
frontend/src/hooks/: useSessionWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/types/: session.ts
